--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
                     <section class="personal">
                         <h3>Pessoal:</h3>
                         <ul>
-                            <li>Liderança</li>
+                            <li>Organização</li>
+                            <li>Flexibilidade</li>
                             <li>Empatia</li>
-                            <li>Trabalho em equipe</li>
+                            <li>Comunicação com equipe multidisciplinares</li>
                             <li>Resiliência</li>
                         </ul>
                     </section>
@@ -154,7 +155,7 @@
                         <h3 class="title">Arquiteta de interiores / Cadore Arquitetura </h3>
                         <span class="period">Out 2021 - Mar 2022</span>
                         <p>
-                            Atividades: Elaboração de plantas arquitetônico 
+                            Atividades: Elaboração de plantas arquitetônicas; Detalhamentos de estruturas e mobiliários; Elaboração de modelo arquitetônico em 3D; Renderização utilizando Enscape e/ou Vray. 
                         </p>
                     </li>
                     
