atualização de links

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
                 <ul class="projects">
                     <li>
                         <span class="title github">App Mata-Mosquito</span>
-                        <a href="https://app-mata-mosquito.vercel.app/" target="_blank">Link do projeto</a>
+                        <a href="https://app-mata-mosquito.vercel.app/" target="_blank">Link do site</a>
                     </li>
                     <li>
                         <span class="title github">Pokedéx</span>
-                        <a href="https://github.com/Geiziane-Souza/app-mata-mosquito">App Mata-Mosquito</a>
+                        <a href="https://pokedex-geiziane.netlify.app/">Link do site</a>
                     </li>
                     <li>
-                        <span class="title github">App Mata-Mosquito</span>
-                        <a href="https://github.com/Geiziane-Souza/app-mata-mosquito">App Mata-Mosquito</a>
+                        <span class="title github">Moor Clothing - Loja virtual</span>
+                        <a href="moor-clothing-store.netlify.app">Link do site</a>
                     </li>
                 </ul>
             </div>
