--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </li>
                     <li>
                         <span class="title github">Moor Clothing - Loja virtual</span>
-                        <a href="moor-clothing-store.netlify.app">Link do site</a>
+                        <a href="https://moor-clothing-store.netlify.app">Link do site</a>
                     </li>
                 </ul>
             </div>
